--- a/Calculus Done Taiwan/Calculus_Done_Taiwan.tex
+++ b/Calculus Done Taiwan/Calculus_Done_Taiwan.tex
@@ -1347,7 +1347,6 @@ Note that $\textbf{g}$ clearly satisfies:
 \end{align*}
 for all $\textbf{y} \in V$, which in particular \customref{DT}{manifest the fact that $\textbf{g}$ is $C^1$}. 
 \section{Legendre type formula}
-\section{Integration on manifolds}
 \section{Miscellaneous}
 \begin{theorem}
 \label{THSa}
@@ -1362,6 +1361,20 @@ n!\sim \sqrt{2\pi n} \left(\frac{n}{e} \right)^n  ,\quad \text{ as }n\rightarrow
 \begin{proof}
 See Wade Theorem 11.63
 \end{proof}
+\begin{theorem}
+\label{THdivt}
+\textbf{(Divergence theorem)}  Let $M \subseteq \R^3$ be compact with piecewise smooth boundary and $\textbf{F}:M\rightarrow \R^3$ be $C^1$. Then:  
+\begin{align*}
+\int_{\partial M} \textbf{F} \cdot \textbf{n} dA = \int_{M} \nabla \cdot \textbf{F} dV 
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\label{THGt}
+\textbf{(Green's theorem)} Let $C\subseteq \R^2$ be a positively oriented, piecewise smooth, and smooth curve. Let $D\subseteq \R^2$ be the region bounded by $C$. If  $L,M \in C^1(D)$, then 
+\begin{align*}
+\int_C Ldx+M dy= \int_D  \left( \frac{\partial M}{\partial x} - \frac{\partial L}{\partial y} \right) dA 
+\end{align*}
+\end{theorem}
 \chapter{NTU Math M.A. Program Entrance Exam}
 \section{Year 114}
 \begin{question}{easy estimate}{}
@@ -1846,14 +1859,38 @@ It now follows from continuity of  $E$ that $f(E)$ is compact. Because $Y$ is Ha
 
 The rest of the proof then follows from checking that $K^{\circ }-f(E)$ is a neighborhood of $y$ disjoint from $f(A)$. 
 \end{proof}
-\begin{question}{}{}
-Let $\textbf{F}:\R^3 \rightarrow \R^3$ be the identity map, and let $M\triangleq \set{(x,y,z)\inr^3: x^2+y^2 \leq z \leq \sqrt{2-x^2+y^2}}$ be positively oriented, so the normal vector field point "outward."\\
-
-Compute:
+\begin{question}{divergence theorem}{}
+Let $\textbf{F}:\R^3 \rightarrow \R^3$ be the identity map, and let $M\triangleq \set{(x,y,z)\inr^3: x^2+y^2 \leq z \leq \sqrt{2-(x^2+y^2)}}$ be positively oriented, so the normal vector field point "outward. Compute:
 \begin{align*}
 \int_{\partial M} \textbf{F} \cdot \textbf{n} dA
 \end{align*}
 \end{question}
+\begin{proof}
+By \customref{THdivt}{divergence theorem} and \customref{THFaT}{Fubini's theorem}, we have 
+\begin{align*}
+\int_{\partial M} \textbf{F}\cdot \textbf{n}d A = \int_M \nabla \cdot \textbf{F} dV = \int_M 3 dV  
+\end{align*}
+To perform \customref{THcovf}{change of variables}, we set:  
+\begin{align*}
+x=r \cos \theta \quad \text{ and }\quad y=r \sin \theta
+\end{align*}
+We have Jacobian $\abso{J_T}=\abso{r}$, and because $x^2+y^2 = \sqrt{2- (x^2+y^2)} \implies  r^2=x^2+y^2=1$, we also have: 
+ \begin{align*}
+T^{-1}(M) = \set{\theta \in [0,2\pi ]\quad \text{ and }\quad r\in [0,1]\quad\text{ and }\quad  z \in [r^2, \sqrt{2-r^2} ]  } 
+\end{align*}
+We may now compute
+\begin{align*}
+\int_M 3 dV= \int_{0}^{2\pi }  \int_{0}^1 \int_{r^2}^{\sqrt{2-r^2} } 3r dzdrd\theta
+\end{align*}
+Because using \customref{THcovf}{change of variables}, we have:  
+\begin{align*}
+  \int_0^1 r \sqrt{2-r^2}  dr =\int^{2}_{1} \frac{\sqrt{u}}{2}du = \frac{2^{\frac{3}{2}}-1}{3},\quad \text{ where we set } u= 2-r^2 
+\end{align*}
+We then have: 
+\begin{align*}
+6 \pi \int_{0}^1 \int_{r^2}^{\sqrt{2-r^2} } 3r dzdrd\theta = \pi  \left( \frac{-3}{2}+2 \left(2^{\frac{3}{2}} -1\right) \right)
+\end{align*}
+\end{proof}
 \begin{question}{metric topology}{}
 Let $M$ be a metric space with countable elements. Prove or disprove that $M$ is connected. 
 \end{question}
@@ -2022,18 +2059,39 @@ Show that $L+g:\R^3 \rightarrow \R^3$ is invertible near the origin.
 \begin{proof}
 
 \end{proof}
-\begin{question}{}{}
+\begin{question}{change of variable, multiple integral}{}
 Find the volume of the ellipsoid: 
 \begin{align*}
   (x+2y)^2+ (x-2y+z)^2 +3z^2 \leq 1
 \end{align*}
-Let $C\subseteq \R^2$ be a positively oriented simple closed curve. Find the curve $C$ that maximize the integral: 
-\begin{align*}
-\int_C y^3 dx+ (3x-x^3)dy
-\end{align*}
 \end{question}
 \begin{proof}
-
+To perform \customref{THcovf}{change of variables}, we set: 
+\begin{align*}
+t=\sqrt{3}z  \quad \text{ and }\quad u=x+2y \quad \text{ and }\quad v=x-2y+z
+\end{align*}
+which linearly and injectively maps the unit ball to
+\begin{align*}
+M\triangleq \set{(x,y,z)\inr^3:(x+2y)^2 + (x-2y+z)^2 + 3z^2\leq  1}
+\end{align*}
+Because the Jacobian $\abso{J_T}$ is $\abso{\frac{-\sqrt{3} }{12}}$, we see that  
+\begin{align*}
+\int_M dV = \int_{B_1(\textbf{0})}  \frac{\sqrt{3}}{12}dV= \frac{\sqrt{3}}{12}\cdot \operatorname{Vol}(B_1(\textbf{0}))= \frac{\sqrt{3} }{12} \cdot \frac{4}{3} \pi = \frac{\sqrt{3} \pi }{9} 
+\end{align*}
+\end{proof}
+\begin{question}{Green's theorem}{}
+Let $C\subseteq \R^2$ be a positively oriented simple closed curve. Find the curve $C$ that maximize the integral: 
+\begin{align}
+\label{EQiC}
+\int_C y^3 dx+ (3x-x^3)dy
+\end{align}
+\end{question}
+\begin{proof}
+Let $D$ be the region bounded by  $C$. By \customref{THGt}{Green's theorem}, we have 
+\begin{align*}
+\int_C y^3dx+ (3x-x^3)dy= \int_D \left(\frac{d(3x-x^3)}{dx} - \frac{dy^3}{dy} \right) dA= \int_D \left( 3-3x^2-3y^2 \right) dA
+\end{align*}
+We now see that the curve that maximize \myref{value}{EQiC} is the unit circle $x^2+y^2=1$. 
 \end{proof}
 \begin{question}{Estimate with Weierstrass approximation theorem}{}
 Let $f:[0,1]\rightarrow \R$ be continuous. Find the limit: 
@@ -2229,7 +2287,7 @@ We have an injective differentiable map:
 (t,\theta ,r)&\mapsto  t\textbf{v}+ r (\cos \theta) \textbf{w}+ r \left(\sin \theta \right) \textbf{s} \\
 &= \left( t+ \frac{r\cos \theta}{\sqrt{2} } + \frac{r\sin \theta}{\sqrt{6} }, t+ \frac{- r \cos \theta}{\sqrt{2} }+ \frac{r \sin \theta}{\sqrt{6} }, t + \frac{-2 r \sin \theta}{\sqrt{6} } \right)
 \end{align*} 
-Such that when we perform the \customref{THcovf}{change of variable} with \customref{THFaT}{Fubini}, we have: 
+Such that when we perform the \customref{THcovf}{change of variable} with \customref{THFaT}{Fubini's theorem}, we see: 
 \begin{align*}
 \int_M \cos (x+y+z) dV= \int_0^{2\pi } \int^{\frac{1}{\sqrt{3} }}_{\frac{-1}{\sqrt{3} }} \int_0^{\sqrt{1-3t^2} } \cos (3t) \sqrt{3}r dr dt d\theta  
 \end{align*}
