--- a/Linear Algebra Done Taiwan/preamble.tex
+++ b/Linear Algebra Done Taiwan/preamble.tex
@@ -106,7 +106,7 @@
 \newtheorem{lemma}[theorem]{Lemma}  
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{axiom}[theorem]{Axiom}
-
+\newtheorem{example}[theorem]{Example}
 
 % tcolorbox Setup
 \usepackage[most,many,breakable]{tcolorbox}
